force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BundleFamily__c.field-meta.xml
<CustomField>
    <fullName>BundleFamily__c</fullName>
    <description>Familia del Bundle al que pertenece el Product Option</description>
    <formula>SBQQ__ProductOption__r.BundleFamily__c</formula>
    <label>Familia Bundle</label>
    <type>Text</type>
</CustomField>