force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DiscountDuration__c.field-meta.xml
<CustomField>
    <fullName>DiscountDuration__c</fullName>
    <description>Duración del descuento de tarifa de gas</description>
    <label>Duración del descuento (Años)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>