force-app/main/default/objects/SBQQ__QuoteLine__c/fields/EarlyTermination__c.field-meta.xml
<CustomField>
    <fullName>EarlyTermination__c</fullName>
    <description>Campo que se rellena con la Price Rule Coste depósito</description>
    <label>Resolución Anticipada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>