force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceRuleCheck__c.field-meta.xml
<CustomField>
    <fullName>PriceRuleCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para que se pueda cambiar el precio resultante de una Price Rule</description>
    <label>Price Rule</label>
    <type>Checkbox</type>
</CustomField>