force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ProductCodeBundle__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeBundle__c</fullName>
    <description>Código de producto del Bundle del Product Option. Empleado para regla de precios de Instalación de equipos</description>
    <formula>SBQQ__ProductOption__r.ProductCodeBundle__c</formula>
    <label>Código Producto Bundle</label>
    <type>Text</type>
</CustomField>