force-app/main/default/objects/SBQQ__QuoteLine__c/fields/TankName__c.field-meta.xml
<CustomField>
    <fullName>TankName__c</fullName>
    <description>Modelo</description>
    <label>Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>